# timeline-rust

./: Cargo.toml  Dockerfile  readme.md
migrations/: 202507252150_create_event_table.sql  202507252353_update_timestamps_event_table.sql  202507261040_create_timeline_table.sql  202507261047_add_foreign_key_event.sql  202507261102_set_timeline_id_not_nullable.sql
src/: event.rs  main.rs  timeline.rs
